<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <include
                android:id="@+id/app_bar"
                layout="@layout/app_bar_main" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_story"
            android:layout_width="0dp"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:contentDescription="@string/story_image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_loading"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
            app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize5Percent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_camera"
            style="@style/primaryButtonStyle"
            android:layout_marginTop="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/camera"
            app:icon="@drawable/ic_camera"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toStartOf="@id/gd_center"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/img_story" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_gallery"
            style="@style/primaryButtonStyle"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_14sdp"
            android:text="@string/gallery"
            app:icon="@drawable/ic_gallery"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toEndOf="@id/gd_center"
            app:layout_constraintTop_toBottomOf="@id/img_story" />

        <TextView
            android:id="@+id/tv_description_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:labelFor="@id/ed_add_description"
            android:text="@string/description"
            android:textSize="@dimen/_13ssp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/btn_camera" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_description"
            style="@style/PrimaryTextInputLayout"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="@id/gd_end"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintTop_toBottomOf="@id/tv_description_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:textCursorDrawable="@drawable/sh_cursor_edittext"
                tools:ignore="RtlSymmetry" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload"
            style="@style/primaryButtonStyle"
            android:text="@string/upload"
            android:layout_marginVertical="@dimen/_20sdp"
            app:layout_constraintVertical_bias="0.2"
            app:layout_constraintTop_toBottomOf="@id/til_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/gd_start"
            app:layout_constraintEnd_toEndOf="@id/gd_end"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_20sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gd_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_20sdp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
